Fixed extra padding.

--- a/CoworkingSpaceTinder/public/css/launch.css
+++ b/CoworkingSpaceTinder/public/css/launch.css
@@ -105,7 +105,7 @@ body {
 	*/
 	font-size: 0.7em;
 	padding-left: 0%;
-	padding-bottom: 5%;
+	padding-bottom: 10px;
 	border-bottom: 1px solid !important;
 	border-color: #0cb6ff!important;
 }
